...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/eventCreatorMainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
...
            android:layout_height="50dp"
            android:text="@string/create_an_event_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/col_on_primary"
            app:cardBackgroundColor="@color/col_on_primary"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
...

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <EditText
                    android:id="@+id/editEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/event_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
...
                    android:id="@+id/checkGeolocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_geolocation" />

                <EditText
                    android:id="@+id/editEventLocationName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint="@string/location_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonEventAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event_button_text"
            app:cornerRadius="50dp" />

        <ProgressBar
...
