<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="PluralsCandidate">

    <string name="app_name">1Direction</string>

    <string name="nav_header_username">Guest</string>
    <string name="nav_header_email" />
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_map">Map</string>
    <string name="menu_account">Account</string>
    <string name="menu_sign">Sign In</string>
    <string name="menu_logout">Logout</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="no_loc">No location precised</string>

    <!-- Strings related to sign in/register-->
    <string name="welcome">Welcome</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="register_failed">Register failed</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="button_register_text">Register</string>
    <string name="button_sign_in_text">Sign in</string>
    <string name="clickable_text_to_sign_in">Already an account?</string>
    <string name="clickable_text_to_register">New user?</string>
    <string name="dialog_logout_tittle">Log out</string>
    <string name="dialog_logout_body">Are you sure you want to log out ?</string>
    <string name="dialog_logout_yes">Yes</string>
    <string name="dialog_logout_no">No</string>

    <string name="add_event">Add Event</string>
    <string name="fab_favorite">Fab favorite</string>
    <string name="fab_order">Fab order</string>
    <string name="recycler_view_events">Recycler view for events</string>
    <string name="update_event">Modify Event</string>
    <string name="no_events_yet">You do not have any events yet</string>
    <string name="eventEndTimeDisplay">eventEndTimeDisplay</string>
    <string name="eventStartTimeDisplay">eventStartTimeDisplay</string>
    <string name="eventNameLocation">eventNameLocation</string>
    <string name="buttonDisplay">buttonDisplay</string>
    <string name="buttonDisplayDelete">buttonDisplayDelete</string>
    <string name="favorite_button">favorite_button</string>
    <string name="horlogeIcon">horlogeIcon</string>
    <string name="locationIcon">locationIcon</string>
    <string name="eventLocation">eventLocation</string>
    <string name="eventName">eventName</string>
    <string name="eventStartTime">eventStartTime</string>
    <string name="eventEndTime">eventEndTime</string>

    <!-- Strings related to calendar and event creation -->
    <string name="cancel"> Cancel </string>
    <string name="fragment_map_event_name">Event name</string>
    <string name="fragment_map_event_time_start">Start time</string>
    <string name="fragment_map_event_time_end">End time</string>
    <string name="fragment_map_event_location">Location</string>

    <!-- Strings related to map navigation-->
    <string name="navigation_started_text">Navigation started</string>
    <string name="navigation_stopped_text">Navigation ended</string>
    <string name="navigation_reroute_request">Reroute request</string>
    <string name="navigation_reroute_failed">Reroute failed</string>
    <string name="navigation_reroute_success">Reroute succeeded</string>
    <string name="navigation_distance_small_unit">m</string>
    <string name="navigation_distance_big_unit">km</string>
    <string name="navigation_manager_stop">✖</string>

    <string name="route_service_request">Route has been requested</string>
    <string name="route_service_failed">Route request has failed</string>
    <string name="route_service_success">Route has been retrieved</string>

    <string name="navigation_final_destination_reached">You have arrived to your destination</string>
    <string name="navigation_waypoint_destination_reached">You have arrived at a way point</string>
    <string name="destination_reached">Destination Reached !</string>
    <string name="destination_reached_acceptance">Proceed</string>
    <string name="destination_reached_cancel">Cancel</string>

    <!-- Strings related to changing username in account -->
    <string name="changed_name_success">Changed name to </string>
    <string name="changed_name_failure">No user logged in</string>
    <string name="change_username_fill">Username</string>
    <string name="change_username_button">Change username</string>
    <string name="changed_name_too_long">Username is too long</string>

    <!-- Strings related to event creator -->
    <string name="create_an_event_title">CREATE AN EVENT</string>
    <string name="create_event_button_text"> Create event </string>
    <string name="event_name_hint">Event name</string>
    <string name="location_hint">Location</string>
    <string name="start_time_text">Start time:</string>
    <string name="end_time_text">End time:</string>
    <string name="recurrence_end_text">Repeat until:</string>
    <string name="no_location_event">No location specified</string>
    <string name="set_favorite_button_desc">set favorite</string>

    <string name="set_event_location">SET EVENT LOCATION</string>
    <string name="location_name">Location name</string>
    <string name="search">Search:</string>
    <string name="use_current_location">Use current location</string>
    <string name="result">Result:</string>
    <string name="set_geolocation">Set geolocation</string>
    <string name="use_geolocation">Use geolocation</string>

    <string name="empty_event_name">Please specify a name for your event.</string>
    <string name="event_name_too_long">The event name is too long. Provide a name no longer than %d characters.</string>
    <string name="end_before_start">Invalid: The event ends before it even starts.</string>
    <string name="event_time_too_long">The event cannot last longer than a day. Specify a recurrence if it should last longer than a day.</string>
    <string name="location_name_too_long">The custom location name is too long. Provide a name no longer than %d characters.</string>
    <string name="recurrence_end_too_soon">The recurrence end time is too soon. It should be at least the event start time.</string>
    <string name="no_geoloc_set">The geolocation must be set.</string>

    <string name="my_location_button_desc">my_location_button</string>

    <string name="current_date">CurrentDate</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="view_events">View Events</string>
    <string name="shrek_left">Our lord and savior dabbing to the left</string>
    <string name="shrek_right">Our lord and savior dabbing to the right</string>
    <string name="repeat_event">Repeat event ?</string>
    <string name="repeat_every">Repeat every:</string>
    <string name="amount">Amount</string>

    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="textview">TextView</string>

    <!-- Google calendar related -->
    <string name="export_your_calendar">Export your calendar:</string>
    <string name="export_to_google_calendar">Export to Google Calendar</string>
    <string name="import_your_calendar">Import a Google Calendar:</string>
    <string name="import_from_google_calendar">Import from Google Calendar</string>
    <string name="next_maneuver_icon_desc">next maneuver icon</string>
    <string name="speed_limit_sign_desc">speed limit sign</string>

    <!-- Navigation -->
    <string name="set_starting_point">Set starting point</string>
    <string name="nav_cancel">Cancel</string>
    <string name="set_end_point">Set end point</string>
    <string name="start_navigation">Start Navigation</string>

    <!-- Misc -->
    <string name="text_view">TextView</string>


</resources>