...
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_create_event"
            android:icon="@drawable/ic_date_range_black_18dp"
            android:title="@string/add_event" />
        <item
            android:id="@+id/nav_sign"
            android:icon="@drawable/ic_menu_sign"
            android:title="@string/menu_sign" />
...
